# kPen

./: CMakeLists.txt  DrawingUtils.h  Info.plist  Info.plist.in  README.md  SelectTool.cc  Tools.h  main.cc  vcpkg.json
.github/workflows/: build.yml
assets/: AppIcon.icns
cmake/: kPen.rc.in
src/: CanvasResizer.cc  CanvasResizer.h  Constants.h  CursorManager.cc  CursorManager.h  DrawingUtils.cc  DrawingUtils.h  Toolbar.cc  Toolbar.h  Tools.h  UndoManager.cc  UndoManager.h  ViewController.cc  ViewController.h  kPen.cc  kPen.h  main.cc  version.h.in
src/menu/: MacMenu.h  MacMenu.mm  WinMenu.cc  WinMenu.h  WinUpdate.cc  WinUpdate.h  tinyfiledialogs.c
src/stb/: ClipboardMac.mm  stb_impl.cc
src/tools/: AbstractTool.cc  BrushTool.cc  EraserTool.cc  FillTool.cc  PickTool.cc  ResizeTool.cc  SelectTool.cc  ShapeTool.cc  StrokeTool.cc  TransformTool.cc
